--- a/fma/src/main/resources/application.properties
+++ b/fma/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url = jdbc:mysql://factory-management-automation.cosumwujg7oo.ap-northeast-2.rds.amazonaws.com/devdb
+spring.datasource.username = admin
+spring.datasource.password = sajhhs2022
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
 
