--- a/fma/src/main/resources/application.properties
+++ b/fma/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username = admin
 spring.datasource.password = sajhhs2022
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-spring.mvc.view.prefix=/WEB-INF/
-spring.mvc.view.suffix=.jsp
-
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
